fix: exclusão de link sem função

--- a/desafiofront.html
+++ b/desafiofront.html
@@ -13,8 +13,7 @@
         <div class="cabecalho-centro">
             <img src="logo.png"/>
             <div class="menu">
-                <a href="*">Inicio</a>
-                <a href="*">Sobre</a>
+                <a href="">Inicio</a>
                 <a href="desafiocontato.html">Contato</a>
             </div>
         </div>
