--- a/desafiocontato.html
+++ b/desafiocontato.html
@@ -30,7 +30,7 @@
                         <div><img src="pin 1.png"/></div>
                         <div class="h5">Endereço</div>
                     </div>
-                    <p> Av. Tancredo Neves, 2227, Ed. Salvador Prime Caminho das Árvores, Salvador • Bahia</p>
+                    <p> Av. Tancredo Neves, 0000, Salvador • Bahia</p>
                     <div class="telefone">
                         <div><img src="phone 1.png"/></div>
                         <div class="h5">Telefone</div>
@@ -40,7 +40,7 @@
                         <div><img src="support 1.png"/></div>
                         <div class="h5">Suporte</div>
                     </div>
-                    <p>suporte@cubos.academy</p>
+                    <p>suporte@logoipsum.academy</p>
                     <div class="contato">
                         <h4>ENTRE EM CONTATO</h4>
                             <div class="nome-email">
